--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     - sudo apt-get update -qq
 install: 
     - pip install -r requirements.txt --use-mirrors
-    - pip install -e .
+    - ls && cd Contiguity && python setup.py install
 notifications:
   email: true
 script:
