--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ python:
 before_install:
     # We do this to make sure we get dependencies
     - sudo apt-get update -qq
-install: 
+install:
     - pip install -r requirements.txt --use-mirrors
-    - python setup.py install
+    - pip install .
 notifications:
   email: true
 script:
